Attempted fix for navbar not working on mobile

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -18,3 +18,7 @@
   right: 10px;
   top: 2px;
 }
+
+.c-navbar__logo {
+  display: inline-block;
+}
